Prevents the <textarea> from overflowing its parent's width

--- a/tooling/visualization/styles/style.css
+++ b/tooling/visualization/styles/style.css
@@ -30,6 +30,7 @@ body {
 .code-input:focus {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     border: 1px solid #ccc;
+    max-width: 100%;
 }
 
 label,
